--- a/full-stack/.net core/BlogWebApp/BlogWebApp.Api/appsettings.json
+++ b/full-stack/.net core/BlogWebApp/BlogWebApp.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogWebAppSqlServer": "Server=.;Database=BlogWebApp;TrustServerCertificate=True;Integrated Security=True"
+  }
 }
