--- a/ASP.Net/image server/ImageServer.Api/Properties/launchSettings.json
+++ b/ASP.Net/image server/ImageServer.Api/Properties/launchSettings.json
@@ -36,6 +36,17 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "ImageServer.Api": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7000;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_STATICWEBASSETS_ENABLED": "false"
+      }
     }
   }
 }
